--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body{
     text-align: center;
-    font-family: "Arial";
+    font-family: 'Times New Roman', Times, serif;
     color: gray;
     font-size: 16px;
     margin: 0;
@@ -11,7 +11,7 @@ body{
     width: 70%;
     padding: 1em;
     text-align: left;
-    border: 1px solid red;
+    border: 1px solid black;
     margin: 0 auto;
 }
 
